DOC-2383: Update Svelte tech ref to include ID as an anchor point.

--- a/modules/ROOT/partials/integrations/svelte-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/svelte-tech-ref.adoc
@@ -1,6 +1,14 @@
 Covered in this section:
 
 * xref:configuring-the-tinymce-svelte-integration[Configuring the TinyMCE Svelte integration]
+** xref:api-key[apikey]
+** xref:licensekey[licenseKey]
+** xref:channel[channel]
+** xref:id[id]
+** xref:inline[inline]
+** xref:disabled[disabled]
+** xref:scriptsrc[scriptsrc]
+** xref:conf[conf]
 * xref:component-binding[Component binding]
 * xref:event-binding[Event binding]
 
