--- a/modules/ROOT/partials/integrations/angular-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/angular-tech-ref.adoc
@@ -129,7 +129,7 @@ include::partial$misc/get-an-api-key.adoc[]
 ></editor>
 ----
 
-[[licenseKey]]
+[[licensekey]]
 === `+licenseKey+`
 
 {cloudname} License key.
