--- a/modules/ROOT/partials/integrations/svelte-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/svelte-tech-ref.adoc
@@ -1,7 +1,7 @@
 Covered in this section:
 
 * xref:configuring-the-tinymce-svelte-integration[Configuring the TinyMCE Svelte integration]
-** xref:api-key[apikey]
+** xref:apikey[apiKey]
 ** xref:licensekey[licenseKey]
 ** xref:channel[channel]
 ** xref:id[id]
