--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -406,7 +406,9 @@
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
 *** {productname} 7.1.2
-//
+**** xref:7.1.2-release-notes.adoc#overview[Overview]
+**** xref:7.1.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:7.1.2-release-notes.adoc#bug-fixes[Bug fixes]
 *** {productname} 7.1.1
 **** xref:7.1.1-release-notes.adoc#overview[Overview]
 **** xref:7.1.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
