--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,12 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 7.1.2 - 2024-06-05
+
+### Fixed
+- CSS color values set to `transparent` were incorrectly converted to '#000000`.
+// #TINY-10916
+
 == 7.1.1 - 2024-05-22
 
 === Fixed
