--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,7 +405,11 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
-*** TinyMCE 7.1.1
+*** {productname} 7.1.2
+**** xref:7.1.2-release-notes.adoc#overview[Overview]
+**** xref:7.1.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:7.1.2-release-notes.adoc#bug-fixes[Bug fixes]
+*** {productname} 7.1.1
 **** xref:7.1.1-release-notes.adoc#overview[Overview]
 **** xref:7.1.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:7.1.1-release-notes.adoc#bug-fixes[Bug fixes]
