--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -310,11 +310,17 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:advtable.adoc[Enhanced Tables]
-*** xref:exportpdf.adoc[Export to PDF]
-*** xref:exportword.adoc[Export to Word]
+*** Export to PDF
+**** xref:exportpdf.adoc[Export to PDF]
+**** xref:export-to-pdf-standalone-service.adoc[Export to PDF standalone service]
+*** Export to Word
+**** xref:exportword.adoc[Export to Word]
+**** xref:export-to-word-standalone-service.adoc[Export to Word standalone service]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
-*** xref:importword.adoc[Import from Word]
+*** Import from Word
+**** xref:importword.adoc[Import from Word]
+**** xref:import-from-word-standalone-service.adoc[Import from Word standalone service]
 *** xref:editimage.adoc[Image Editing]
 *** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
