--- a/modules/ROOT/partials/configuration/ai_request.adoc
+++ b/modules/ROOT/partials/configuration/ai_request.adoc
@@ -29,7 +29,7 @@ const ai_request = (request, respondWith) => {
       'Authorization': `Bearer ${api_key}`
     },
     body: JSON.stringify({
-      model: 'gpt-3.5-turbo',
+      model: 'gpt-4o',
       temperature: 0.7,
       max_tokens: 800,
       messages: [{ role: 'user', content: request.prompt }],
