--- a/modules/ROOT/partials/integrations/angular-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/angular-quick-start.adoc
@@ -1,6 +1,8 @@
 :packageName: tinymce-angular
 
-The https://github.com/tinymce/tinymce-angular[Official {productname} Angular component] integrates {productname} into Angular projects. This procedure creates a https://angular.io/guide/setup-local[basic Angular application] containing a {productname} editor.
+The https://github.com/tinymce/tinymce-angular[Official {productname} Angular component] integrates {productname} into Angular projects. This procedure creates a https://angular.dev/tools/cli/setup-local[basic Angular application] containing a {productname} editor.
+
+This procedure uses standalone components. If you wish to use Angular Modules, then see the xref:angular-modules[Note on Angular Modules].
 
 For examples of the {productname} Angular integration, visit https://tinymce.github.io/tinymce-angular/[the tinymce-angular storybook].
 
@@ -45,44 +47,36 @@ ifeval::["{productSource}" != "package-manager"]
 npm install --save @tinymce/tinymce-angular
 ----
 endif::[]
-. Using a text editor, open `+/path/to/tinymce-angular-demo/src/app/app.module.ts+` and replace the contents with:
+. Using a text editor, open `+/path/to/tinymce-angular-demo/src/app/app.component.ts+` and replace the contents with:
 +
-[source,ts]
+[source,ts,subs="attributes+"]
 ----
-import { BrowserModule } from '@angular/platform-browser';
-import { NgModule } from '@angular/core';
-import { EditorModule } from '@tinymce/tinymce-angular';
-import { AppComponent } from './app.component';
+import { Component } from '@angular/core';
+import { EditorComponent } from '@tinymce/tinymce-angular';
 
-@NgModule({
-  declarations: [
-    AppComponent
-  ],
-  imports: [
-    BrowserModule,
-    EditorModule
-  ],
-  providers: [],
-  bootstrap: [AppComponent]
+@Component({
+  selector: 'app-root',
+  standalone: true,
+  imports: [EditorComponent],
+  template: `
+  <h1>{productname} {productmajorversion} Angular Demo</h1>
+  <editor
+    [init]="init"
+  />
+  `
 })
-export class AppModule { }
+export class AppComponent {
+  init: EditorComponent['init'] = {
+    plugins: 'lists link image table code help wordcount'
+  };
+}
 ----
-. Using a text editor, open `+/path/to/tinymce-angular-demo/src/app/app.component.html+` and replace the contents with:
-+
-[source,tsx,subs="attributes+"]
-----
-<h1>{productname} {productmajorversion} Angular Demo</h1>
-<editor
-  [init]="{ plugins: 'lists link image table code help wordcount' }"
-></editor>
-----
-
 ifeval::["{productSource}" == "cloud"]
 . Include the `+apiKey+` option in the editor element and include your link:{accountsignup}/[{cloudname} API key]. Such as:
 +
 [source,tsx]
 ----
-<editor apiKey="your-api-key" [init]={ /* your other settings */ } ></editor>
+<editor apiKey="your-api-key" [init]="init" />
 ----
 endif::[]
 ifeval::["{productSource}" == "package-manager"]
@@ -96,17 +90,16 @@ ifeval::["{productSource}" == "package-manager"]
 ----
 
 . Load TinyMCE.
-* To load TinyMCE when the editor is initialized (also known as lazy loading), add a dependency provider to the module using the `+TINYMCE_SCRIPT_SRC+` token.
+* To load TinyMCE when the editor is initialized (also known as lazy loading), add a dependency provider to the component using the `+TINYMCE_SCRIPT_SRC+` token.
 +
 [source,ts]
 ----
-import { EditorModule, TINYMCE_SCRIPT_SRC } from '@tinymce/tinymce-angular';
+import { EditorComponent, TINYMCE_SCRIPT_SRC } from '@tinymce/tinymce-angular';
 /* ... */
-@NgModule({
+@Component({
   /* ... */
-  imports: [
-    EditorModule
-  ],
+  standalone: true,
+  imports: [EditorComponent],
   providers: [
     { provide: TINYMCE_SCRIPT_SRC, useValue: 'tinymce/tinymce.min.js' }
   ]
@@ -123,12 +116,16 @@ import { EditorModule, TINYMCE_SCRIPT_SRC } from '@tinymce/tinymce-angular';
 ----
 .. Update the editor configuration to include the `+base_url+` and `+suffix+` options.
 +
-[source,html]
+[source,ts]
 ----
-<editor [init]="{
-  base_url: '/tinymce', // Root for resources
-  suffix: '.min'        // Suffix to use when loading resources
-}"></editor>
+export class AppComponent {
+  /* ... */
+  init: EditorComponent['init'] = {
+    /* ... */
+    base_url: '/tinymce', // Root for resources
+    suffix: '.min'        // Suffix to use when loading resources
+  };
+}
 ----
 endif::[]
 ifeval::["{productSource}" == "zip"]
@@ -142,8 +139,6 @@ To use an independent deployment of {productname}, add a script to either the `+
 ----
 <script src="/path/to/tinymce.min.js"></script>
 ----
-+
-To use an independent deployment of {productname} with the create a Angular application, add the script to `+/path/to/tinymce-angular-demo/src/app/app.component.html+`.
 +
 * Bundling {productname} with the Angular application using a module loader (such as Webpack).
 +
@@ -189,6 +184,29 @@ ng build
 The application has now been deployed on the web server.
 
 NOTE: Additional configuration is required to deploy the application outside the web server root directory, such as +http://localhost:<port>/my_angular_application+.
+
+[[angular-modules]]
+== Note on Angular Modules
+`+EditorModule+` is available to import from `+@tinymce/tinymce-angular+`. Which should be included in your `+my.module.ts+` file.
+
+[source,ts]
+----
+import { NgModule } from '@angular/core';
+import { EditorModule, TINYMCE_SCRIPT_SRC } from '@tinymce/tinymce-angular';
+
+@NgModule({
+  /* ... */
+  imports: [
+    EditorModule
+  ],
+  providers: [
+    // If you're self hosting and lazy loading TinyMCE from node_modules:
+    { provide: TINYMCE_SCRIPT_SRC, useValue: 'tinymce/tinymce.min.js' }
+  ],
+  /* ... */
+})
+export class MyModule {}
+----
 
 == Next Steps
 
