--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -110,7 +110,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 === Added `referrerpolicy` as a valid attribute for an iframe element.
 // #TINY-10374
 
-Previously in {productname}, the `referrerpolicy` attribute was not a valid attribute for an iframe element. In {productname} {release-version}, the `referrerpolicy` attribute has been added to the schema as a valid attribute for an iframe element. This allows users to add an iframe with a `referrerpolicy` attribute.
+Previously in {productname}, the `referrerpolicy` attribute was not considered as valid for iframe elements. In {productname} {release-version}, this attribute has been added to the schema, allowing users to include the `referrerpolicy` attribute in iframes.
 
 
 [[additions]]
