DOC-2446: Add TINY-11001 release note entry

--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -105,12 +105,14 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 [[improvements]]
 == Improvements
 
-{productname} {release-version} also includes the following improvement<s>:
+{productname} {release-version} also includes the following improvements:
 
-=== <TINY-vwxyz 1 changelog entry>
-// #TINY-vwxyz1
+=== Replaced tiny branding logo with `Build with TinyMCE` text and logo.
+// #TINY-11001
 
-// CCFR here.
+Previously, the branding logo in the {productname} status bar was set to the Tiny logo.
+
+Now, the branding logo in the {productname} status bar is set to `Build with` and the {productname} logo.
 
 
 [[additions]]
