--- a/modules/ROOT/partials/integrations/angular-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/angular-quick-start.adoc
@@ -2,7 +2,7 @@
 
 The https://github.com/tinymce/tinymce-angular[Official {productname} Angular component] integrates {productname} into Angular projects. This procedure creates a https://angular.dev/tools/cli/setup-local[basic Angular application] containing a {productname} editor.
 
-This procedure uses standalone components. If you wish to use Angular Modules, then see the xref:angular-modules[Note on Angular Modules].
+This procedure uses standalone components. If using Angular Modules, see xref:angular-modules[Angular Modules].
 
 For examples of the {productname} Angular integration, visit https://tinymce.github.io/tinymce-angular/[the tinymce-angular storybook].
 
